<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/mqtt_port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mqtt_port"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mqtt_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:hint="@string/mqtt_port_hint"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="@id/mqtt_port_label"
        app:layout_constraintEnd_toEndOf="@id/vertical_0.5"
        app:layout_constraintStart_toEndOf="@id/mqtt_port_label"
        app:layout_constraintTop_toTopOf="@id/mqtt_port_label" />

    <TextView
        android:id="@+id/websocket_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/websocket"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_0.5" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/websocket_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/websocket_label"
        app:layout_constraintEnd_toEndOf="@id/vertical_0.5"
        app:layout_constraintTop_toTopOf="@id/websocket_label" />

    <TextView
        android:id="@+id/websocket_port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/websocket_port"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/websocket_label" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/websocket_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:gravity="end"
        android:hint="@string/websocket_port_hint"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="@id/websocket_port_label"
        app:layout_constraintEnd_toEndOf="@id/vertical_0.5"
        app:layout_constraintStart_toEndOf="@id/websocket_port_label"
        app:layout_constraintTop_toTopOf="@id/websocket_port_label" />

    <TextView
        android:id="@+id/websocket_path_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/websocket_path"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/websocket_port_label" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/websocket_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:gravity="end"
        android:hint="@string/websocket_path_hint"
        app:layout_constraintBottom_toBottomOf="@id/websocket_path_label"
        app:layout_constraintEnd_toEndOf="@id/vertical_0.5"
        app:layout_constraintStart_toEndOf="@id/websocket_path_label"
        app:layout_constraintTop_toTopOf="@id/websocket_path_label" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@id/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_0.5"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_jasmine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_0.5"
        app:layout_constraintTop_toTopOf="@id/horizontal_0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>